# bomatech

./: .editorconfig  .env.example  .gitignore  .npmrc  CONTEXT.md  LICENSE  Makefile  README.md  ROADMAP.md  SETUP.md  VISION.md  WORKFLOW.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.github/ISSUE_TEMPLATE/: opus-directive.md
.github/workflows/: api-ci.yml  engines-ci.yml  web-ci.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: config.py  deps.py  main.py  schemas.py
apps/api/app/db/: client.py
apps/api/app/routers/: forecast.py  insights.py  simulation.py  state.py  transactions.py  upload.py
apps/api/tests/: test_smoke.py
apps/web/: .env.example  README.md  middleware.ts  next.config.ts  package.json  tsconfig.json  vercel.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(marketing)/: page.tsx
apps/web/components/: kpi-card.tsx  sidebar.tsx  theme-provider.tsx  topbar.tsx  tweaks-panel.tsx
apps/web/lib/: api.ts  format.ts  supabase-admin.ts  supabase.ts
apps/web/tests/: invoice-reminders.test.ts  period-closure.test.ts
database/: README.md
database/functions/: README.md
database/migrations/: 0001_initial.sql  0002_invoices_emitted.sql  0003_invoices_matching_audit.sql  0004_accounting_periods.sql  0005_close_period_v2.sql  0006_invoice_reminders.sql  0007_suppliers.sql
database/seeds/: demo_data.sql  setup_test_company.sql
docs/: architecture.md  deployment.md  engines.md  legal.md  mvp.md
scripts/: README.md  seed.sh
(+50 files in other folders)
